| Summary: | ASTERISK-28714: REGRESSION: Feature subscription_persistence_recreate (ASTERISK-27759) Causes Segfaults | ||
| Reporter: | Ross Beer (rossbeer) | Labels: | patch |
| Date Opened: | 2020-01-24 19:21:35.000-0600 | Date Closed: | 2020-01-30 09:14:44.000-0600 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_pubsub |
| Versions: | GIT 16.8.0 | Frequency of Occurrence | Frequent |
| Related Issues: | |||
| Environment: | CentOS 7.7 | Attachments: | ( 0) ASTERISK-28714.diff ( 1) core-asterisk-1579914089-thread1.txt |
| Description: | The new feature to implement subscription persistence for ASTERISK-27759 causes asterisk 16 to crash on startup repeatedly in different locations.
I have sent over full backtraces to George, it looks like it could be memory allocation issues? | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-01-24 19:21:36.029-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Benjamin Keith Ford (bford) 2020-01-27 15:22:28.525-0600 Have you tried reverting that patch to see if it stops the crashes from happening? If you aren't able to do that, can you provide some examples of what subscription types you're using? Hopefully that will help narrow down where the root problem is. By: Ross Beer (rossbeer) 2020-01-27 15:28:21.559-0600 I have removed the patch and after doing so there are no further issues. I have provided George Joseph full backtraces with binaries to track the issue down further. By: Joshua C. Colp (jcolp) 2020-01-28 09:25:05.392-0600 Please try the attached patch. By: Ross Beer (rossbeer) 2020-01-29 17:20:16.219-0600 I've tested the patches and there is no longer a crash on restart. By: Friendly Automation (friendly-automation) 2020-01-30 09:14:46.405-0600 Change 13707 merged by Friendly Automation: res_pjsip_pubsub: Increment persistence data ref when recreating. [https://gerrit.asterisk.org/c/asterisk/+/13707|https://gerrit.asterisk.org/c/asterisk/+/13707] By: Friendly Automation (friendly-automation) 2020-01-30 09:23:07.646-0600 Change 13705 merged by George Joseph: res_pjsip_pubsub: Increment persistence data ref when recreating. [https://gerrit.asterisk.org/c/asterisk/+/13705|https://gerrit.asterisk.org/c/asterisk/+/13705] By: Friendly Automation (friendly-automation) 2020-01-30 09:23:25.326-0600 Change 13706 merged by George Joseph: res_pjsip_pubsub: Increment persistence data ref when recreating. [https://gerrit.asterisk.org/c/asterisk/+/13706|https://gerrit.asterisk.org/c/asterisk/+/13706] By: Friendly Automation (friendly-automation) 2020-01-30 09:23:42.119-0600 Change 13680 merged by George Joseph: res_pjsip_pubsub: Increment persistence data ref when recreating. [https://gerrit.asterisk.org/c/asterisk/+/13680|https://gerrit.asterisk.org/c/asterisk/+/13680] By: Friendly Automation (friendly-automation) 2020-01-30 09:40:40.150-0600 Change 13713 merged by George Joseph: res_pjsip_pubsub: Increment persistence data ref when recreating. [https://gerrit.asterisk.org/c/asterisk/+/13713|https://gerrit.asterisk.org/c/asterisk/+/13713] By: Friendly Automation (friendly-automation) 2020-01-30 09:41:05.993-0600 Change 13715 merged by George Joseph: res_pjsip_pubsub: Increment persistence data ref when recreating. [https://gerrit.asterisk.org/c/asterisk/+/13715|https://gerrit.asterisk.org/c/asterisk/+/13715] By: Friendly Automation (friendly-automation) 2020-01-30 09:41:24.183-0600 Change 13714 merged by George Joseph: res_pjsip_pubsub: Increment persistence data ref when recreating. [https://gerrit.asterisk.org/c/asterisk/+/13714|https://gerrit.asterisk.org/c/asterisk/+/13714] | ||